Primeiras formatações do HTML e CSS do portfólio.
Adicionado o atributo `lang` com o valor `pt-BR` para melhor acessibilidade e SEO.
Implementação de temas claro e escuro com base na preferência do usuário.
Utilização de CSS para alternar entre os temas, garantindo uma experiência de usuário

--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LealVerse - Felipe Leal | Desenvolvedor Fullstack</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">    
+    <style>
+        :root {
+            --bg-primary: #0B1A2C;
+            --bg-secondary: rgba(20, 46, 102, 0.3);
+            --bg-card: rgba(20, 46, 102, 0.3);
+            --text-primary: #FFFFFF;
+            --text-secondary: rgba(255, 255, 255, 0.8);
+            --accent-1: #2DA8FF;
+            --accent-2: #197BFF;
+            --accent-3: #0A4FFF;
+            --accent-4: #142E66;
+            --border-color: rgba(45, 168, 255, 0.2);
+            --shadow-color: rgba(10, 79, 255, 0.3);
+        }
+
+        [data-theme="light"] {
+            --bg-primary: #F5F9FF;
+            --bg-secondary: rgba(230, 240, 255, 0.7);
+            --bg-card: rgba(255, 255, 255, 0.9);
+            --text-primary: #0B1A2C;
+            --text-secondary: rgba(11, 26, 44, 0.8);
+            --accent-1: #197BFF;
+            --accent-2: #0A4FFF;
+            --accent-3: #2DA8FF;
+            --accent-4: #E6F0FF;
+            --border-color: rgba(25, 123, 255, 0.2);
+            --shadow-color: rgba(25, 123, 255, 0.1);
+        }
 </head>
 <body>
     
