--- a/index.html
+++ b/index.html
@@ -106,6 +106,35 @@
             50% { transform: translateY(-20px) rotate(10deg); }
         }
 
+        /* Seletor de tema */
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 1000;
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px var(--shadow-color);
+        }
+
+        .theme-toggle i {
+            font-size: 1.5rem;
+            color: var(--accent-1);
+        }
+
+
 </head>
 <body>
     
