Iniciando conteúdo do arquivo index.html
Adição do Header

--- a/index.html
+++ b/index.html
@@ -134,7 +134,19 @@
             color: var(--accent-1);
         }
 
+        /* Header */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 50px;
+            position: relative;
+            z-index: 100;
+        }
 
+
+
+        
 </head>
 <body>
     
