--- a/index.html
+++ b/index.html
@@ -144,9 +144,42 @@
             z-index: 100;
         }
 
+        .logo {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .planet-logo {
+            width: 50px;
+            height: 50px;
+            background: radial-gradient(circle at 30% 30%, var(--accent-2), var(--accent-4));
+            border-radius: 50%;
+            position: relative;
+            box-shadow: 0 0 20px rgba(45, 168, 255, 0.5);
+        }
+
+        .planet-logo::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotateX(75deg);
+            width: 90px;
+            height: 90px;
+            border: 4px solid rgba(45, 168, 255, 0.7);
+            border-radius: 50%;
+            box-shadow: 0 0 15px rgba(45, 168, 255, 0.5);
+        }
+
+        .logo-text {
+            font-size: 28px;
+            font-weight: bold;
+            color: var(--text-primary);
+            text-shadow: 0 0 10px rgba(45, 168, 255, 0.5);
+        }
 
 
-        
 </head>
 <body>
     
