Finalização do Header
Implantação do Nav bar

--- a/index.html
+++ b/index.html
@@ -179,7 +179,36 @@
             text-shadow: 0 0 10px rgba(45, 168, 255, 0.5);
         }
 
+        nav ul {
+            display: flex;
+            list-style: none;
+            gap: 30px;
+        }
 
+        nav a {
+            color: var(--text-primary);
+            text-decoration: none;
+            font-size: 16px;
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: var(--accent-1);
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        
 </head>
 <body>
     
