Adição do Header section
.hero e .hero-title criados

--- a/index.html
+++ b/index.html
@@ -208,7 +208,38 @@
             width: 100%;
         }
 
-        
+        /* Hero Section */
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            padding: 0 20px;
+            text-align: center;
+        }
+
+        .hero-title {
+            font-size: 4.5rem;
+            margin-bottom: 20px;
+            background: linear-gradient(90deg, var(--accent-1), var(--accent-2), var(--accent-3));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            text-shadow: 0 0 30px rgba(45, 168, 255, 0.5);
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from {
+                filter: drop-shadow(0 0 5px rgba(45, 168, 255, 0.7));
+            }
+            to {
+                filter: drop-shadow(0 0 20px rgba(45, 168, 255, 0.9));
+            }
+        }        
+    </style>            
 </head>
 <body>
     
