Style section: Sobre mim
About, about-content, about-text h2, about-text p,
about-info

--- a/index.html
+++ b/index.html
@@ -310,6 +310,40 @@
             color: var(--bg-primary);
             transform: translateY(-5px);
             box-shadow: 0 10px 20px var(--shadow-color);
+        }
+        
+        /* Seção Sobre Mim */
+        .about {
+            padding: 100px 50px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .about-content {
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            gap: 50px;
+            align-items: center;
+        }
+
+        .about-text h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: var(--accent-1);
+        }
+
+        .about-text p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            color: var(--text-secondary);
+            margin-bottom: 20px;
+        } 
+        
+        .about-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
         }        
     </style>            
 </head>
