--- a/index.html
+++ b/index.html
@@ -432,7 +432,25 @@
             border-color: var(--accent-1);
         }
         
+        .service-icon {
+            font-size: 3rem;
+            color: var(--accent-1);
+            margin-bottom: 20px;
+        }
 
+        .service-title {
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+            color: var(--text-primary);
+        }
+
+        .service-description {
+            color: var(--text-secondary);
+            line-height: 1.6;
+        }
+
+
+        
     </style>            
 </head>
 <body>
