--- a/index.html
+++ b/index.html
@@ -449,8 +449,71 @@
             line-height: 1.6;
         }
 
+        /* Seção de Habilidades */
+        .skills {
+            padding: 100px 50px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
 
-        
+        .section-title {
+            font-size: 3rem;
+            text-align: center;
+            margin-bottom: 60px;
+            color: var(--text-primary);
+            position: relative;
+            display: inline-block;
+            width: 100%;
+        }
+
+        .section-title::after {
+            content: '';
+            position: absolute;
+            bottom: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 4px;
+            background: linear-gradient(90deg, var(--accent-2), var(--accent-3));
+            border-radius: 2px;
+        }
+
+        .skills-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 30px;
+        }
+
+        .skill-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            padding: 20px;
+            background: var(--bg-card);
+            border-radius: 15px;
+            transition: all 0.3s ease;
+            border: 1px solid var(--border-color);
+        }
+
+        .skill-item:hover {
+            transform: translateY(-10px);
+            background: var(--bg-secondary);
+            box-shadow: 0 10px 20px var(--shadow-color);
+            border-color: var(--accent-1);
+        }
+
+        .skill-icon {
+            font-size: 3rem;
+            color: var(--accent-1);
+        }
+
+        .skill-name {
+            font-size: 1rem;
+            text-align: center;
+            color: var(--text-primary);
+        }
+
     </style>            
 </head>
 <body>
