--- a/index.html
+++ b/index.html
@@ -514,6 +514,44 @@
             color: var(--text-primary);
         }
 
+        /* Seção de Projetos */
+        .projects {
+            padding: 100px 50px;
+            background: var(--bg-secondary);
+        }
+
+        .projects-container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .project-filters {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-bottom: 40px;
+        }
+
+        .filter-btn {
+            padding: 10px 20px;
+            background: var(--bg-card);
+            border: 1px solid var(--border-color);
+            border-radius: 30px;
+            color: var(--text-primary);
+            font-size: 1rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .filter-btn:hover,
+        .filter-btn.active {
+            background: var(--accent-1);
+            color: var(--bg-primary);
+            border-color: var(--accent-1);
+        }
+        
+
     </style>            
 </head>
 <body>
