Estilo seção Projetos - ultima parte
Titulo, descrição, tags

--- a/index.html
+++ b/index.html
@@ -613,6 +613,32 @@
             padding: 25px;
         }
 
+        .project-title {
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+            color: var(--accent-1);
+        }
+
+        .project-description {
+            margin-bottom: 20px;
+            color: var(--text-secondary);
+            line-height: 1.6;
+        }
+
+        .project-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .tag {
+            padding: 5px 12px;
+            background: rgba(45, 168, 255, 0.2);
+            border-radius: 20px;
+            font-size: 0.8rem;
+            color: var(--accent-1);
+        }
 
     </style>            
 </head>
